--- a/home.html
+++ b/home.html
@@ -13,9 +13,14 @@
     <header class="header header_transition">
       <div class="header__content">
         <div class="header__left"><a class="logo" href="/"><img src="img/logo.svg" alt="Бизнес-школа"/></a></div>
-        <div class="navbar__toggle"></div>
+        <div class="navbar__toggle js_toggle_nav"></div>
         <nav class="header__nav nav">
-          <div class="nav__header"></div>
+          <div class="nav__header"><i class="icon_close js_toggle_nav"></i></div>
+          <div class="nav__search">
+            <div class="search">
+              <input type="text" placeholder="Поиск..."/><i class="icon_search"></i>
+            </div>
+          </div>
           <div class="nav__body">
             <ul class="navbar">
               <li class="navbar__item"><a class="navbar__link" href="about.html">О школе</a>
@@ -30,7 +35,10 @@
               </li>
             </ul>
           </div>
-          <div class="nav__footer"></div>
+          <div class="nav__footer">
+            <div class="nav__contact"><a href="mailto: info@mail.ru"><i class="icon_mail"> </i>info@mail.ru</a><a href="tel: +7 (495) 000 00 00"><i class="icon_call"> </i>+7 (495) 000 00 00</a></div>
+            <div class="soc"><a class="soc__link icon_vk" href="#"></a><a class="soc__link icon_youtube" href="#"></a><a class="soc__link icon_insta" href="#"></a><a class="soc__link icon_watsapp" href="#"></a><a class="soc__link icon_viber" href="#"></a></div>
+          </div>
         </nav>
         <div class="header__right">
           <div class="header__info">
