--- a/th-user.html
+++ b/th-user.html
@@ -13,9 +13,14 @@
     <header class="header">
       <div class="header__content">
         <div class="header__left"><a class="logo" href="/"><img src="img/logo.svg" alt="Бизнес-школа"/></a></div>
-        <div class="navbar__toggle"></div>
+        <div class="navbar__toggle js_toggle_nav"></div>
         <nav class="header__nav nav">
-          <div class="nav__header"></div>
+          <div class="nav__header"><i class="icon_close js_toggle_nav"></i></div>
+          <div class="nav__search">
+            <div class="search">
+              <input type="text" placeholder="Поиск..."/><i class="icon_search"></i>
+            </div>
+          </div>
           <div class="nav__body">
             <ul class="navbar">
               <li class="navbar__item"><a class="navbar__link" href="about.html">О школе</a>
@@ -28,9 +33,13 @@
               </li>
               <li class="navbar__item"><a class="navbar__link" href="teachers.html">Преподаватели и спикеры</a>
               </li>
+              <li class="navbar__item mobile"><a class="navbar__link" href="">Личный кабинет</a></li>
             </ul>
           </div>
-          <div class="nav__footer"></div>
+          <div class="nav__footer">
+            <div class="nav__contact"><a href="mailto: info@mail.ru"><i class="icon_mail"> </i>info@mail.ru</a><a href="tel: +7 (495) 000 00 00"><i class="icon_call"> </i>+7 (495) 000 00 00</a></div>
+            <div class="soc"><a class="soc__link icon_vk" href="#"></a><a class="soc__link icon_youtube" href="#"></a><a class="soc__link icon_insta" href="#"></a><a class="soc__link icon_watsapp" href="#"></a><a class="soc__link icon_viber" href="#"></a></div>
+          </div>
         </nav>
         <div class="header__right">
           <div class="header__info">
@@ -49,7 +58,7 @@
               <div class="user__info">
                 <div class="user__row">
                   <div class="user__avatar"><img src="img/ava.png" alt=""/></div>
-                  <div class="user__name">Иванов И.И.<i class="icon_caret"></i>
+                  <div class="user__name"><span>Иванов И.И.</span><i class="icon_caret"></i>
                     <div class="user__drop">
                       <div class="user__dropItem"><a href=""><i class="icon_logout"> </i>Выход</a></div>
                     </div>
@@ -204,20 +213,22 @@
                 </div>
               </div>
               <h2 class="subtitle">Мои сертификаты</h2>
-                  <div class="lkSerts">
-                    <div class="lkSerts__item">
-                      <div class="lkSerts__img"><img src="img/sert-1.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
+              <div class="lkSerts_slider">
+                    <div class="lkSerts">
+                      <div class="lkSerts__item">
+                        <div class="lkSerts__img"><img src="img/sert-1.jpg" alt=""/></div>
+                        <div class="lkSerts__name">«Сертифицированный менеджер»</div>
+                      </div>
+                      <div class="lkSerts__item">
+                        <div class="lkSerts__img"><img src="img/sert-2.jpg" alt=""/></div>
+                        <div class="lkSerts__name">«Сертифицированный менеджер»</div>
+                      </div>
+                      <div class="lkSerts__item">
+                        <div class="lkSerts__img"><img src="img/sert-3.jpg" alt=""/></div>
+                        <div class="lkSerts__name">«Сертифицированный менеджер»</div>
+                      </div>
                     </div>
-                    <div class="lkSerts__item">
-                      <div class="lkSerts__img"><img src="img/sert-2.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
-                    </div>
-                    <div class="lkSerts__item">
-                      <div class="lkSerts__img"><img src="img/sert-3.jpg" alt=""/></div>
-                      <div class="lkSerts__name">«Сертифицированный менеджер»</div>
-                    </div>
-                  </div>
+              </div>
               <div class="lkForm">
                 <div class="form__title">Добавление сертификата</div>
                 <div class="form form_grid">
